[workspace.package]
edition = "2021"
version = "0.9.0"

authors = ["Mikhail Katychev <mkatych@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/mkatychev/darkroom"

[workspace]
members = [
  "cli",
  "filmreel",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
argh = "0.1"
chrono = "0.4"
colored = "2.1"
colored-diff = "0.2"
colored_json = "4.1"
glob  = "0.3.1"
http = "1.1.0"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std"] }
mdcat = "2.1"
paste = "1"
pest = "2.7"
pest_derive = "2.7"
pretty_assertions = "1.4.0"
prettytable-rs = "0.10"
pulldown-cmark ="0.10"
regex = "1.8.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rstest = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde-hashkey = { version = "0.4", features = ["ordered-float"] }
serde_json = "1.0"
syntect = "5.2"
url = "2.5"
which = "6"
# overflow broken for latest minus
minus = { version = "3.4.0", features = ["static_output"] }
