[workspace.package]
edition = "2021"
version = "0.9.1"

authors = ["Mikhail Katychev <mkatych@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/mkatychev/darkroom"

[workspace]
members = [
  "cli",
  "filmreel",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
argh = "0.1"
chrono = "0.4"
colored = "2.2"
colored-diff = "0.2"
colored_json = "4.1"
glob  = "0.3.2"
http = "1.2.0"
jql = "8.0"
lazy_static = "1.5.0"
log = { version = "0.4", features = ["std"] }
paste = "1"
pest = "2.7"
pest_derive = "2.7"
pretty_assertions = "1.4.1"
prettytable-rs = "0.10"
pulldown-cmark ="0.12"
pulldown-cmark-mdcat = "2.7.1"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
rstest = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde-hashkey = { version = "0.4", features = ["ordered-float"] }
serde_json = "1.0"
syntect = "5.2"
url = "2.5"
which = "6"
# overflow broken for latest minus
minus = { version = "3.4.0", features = ["static_output"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
