[package]
name = "darkroom"
description = "A contract testing tool built in Rust"

version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["man"]
man = ["pulldown-cmark-mdcat", "minus", "syntect", "pulldown-cmark"]

[[bin]]
name = "dark"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argh.workspace = true
chrono.workspace = true
colored-diff.workspace = true
colored.workspace = true
colored_json.workspace = true
http.workspace = true
lazy_static.workspace = true
log.workspace = true
prettytable-rs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
which.workspace = true
filmreel.path = "../filmreel"
filmreel.version = "0.9.0"

pulldown-cmark-mdcat = { workspace = true, optional = true }
syntect = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
# overflow broken for latest minus
minus = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
