[package]
name = "filmreel"
version = "0.6.2"
description = "filmReel parser for Rust"
authors = ["Mikhail Katychev <mkatych@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"

documentation = "https://docs.rs/crate/filmreel/"
homepage = "https://crates.io/crates/filmreel"
repository = "https://github.com/mkatychev/darkroom"

[lib]
name = "filmreel"
path = "src/lib.rs"

[dependencies]
colored = "2.0.0"
glob  = "0.3.0"
lazy_static = "1.4.0"
paste = "1.0.5"
pest = "2.1.3"
pest_derive = "2.1.0"
pretty_assertions = "0.7.2"
regex = "1.5.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde-hashkey = { version = "0.4.0", features = ["ordered-float"] }

jql = { version = "2.9.4", optional = true }

[features]
default = []
full_jql = ["jql"]

[dev-dependencies]
rstest = "0.10.0"
paste = "1.0.5"
