[package]
name = "filmreel"
version = "0.7.0"

description = "filmReel parser for Rust"
readme = "README.md"
documentation = "https://docs.rs/crate/filmreel/"
homepage = "https://crates.io/crates/filmreel"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
colored.workspace = true
glob.workspace = true
lazy_static.workspace = true
paste.workspace = true
pest.workspace = true
pest_derive.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hashkey.workspace = true

jql = { version = "3.3.0", optional = true }

[features]
default = []
full_jql = ["jql"]

[dev-dependencies]
rstest.workspace = true
paste.workspace = true
